# hermes-opensandbox

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json
.claude/plans/: jazzy-riding-pinwheel.md  k8s-http-opensandbox-local-typed-otter.md  rippling-baking-sunset.md
.github/workflows/: publish.yml  workflow.yml
src/hermes_opensandbox/: __init__.py  cli.py  config.py  environment.py  session.py
